# storm-uploader

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: bump-version.yml  release.yml
docs/claude-plans/: fix-replay-reuploading-and-autostart-windows.md
icons-src/: generate.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json  website.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  config.rs  game_session.rs  input_recorder.rs  lib.rs  main.rs  state.rs  uploader.rs  watcher.rs
src-tauri/src/input_recorder/: macos.rs  mod.rs  windows.rs
src/lib/: SettingsView.svelte  StatusBadge.svelte  UploadList.svelte
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
