[package]
name = "uploader"
version = "0.1.0"
description = "Storm Replay Uploader"
authors = ["lightster"]
edition = "2021"

[lib]
name = "uploader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
reqwest = { version = "0.12", features = ["multipart", "rustls-tls", "json"], default-features = false }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["sync", "time", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
