[package]
name = "storm-almanac"
version = "0.1.25"
description = "Storm Almanac"
authors = ["lightster"]
edition = "2021"

[lib]
name = "storm_almanac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
reqwest = { version = "0.12", features = ["multipart", "rustls-tls", "json"], default-features = false }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["sync", "time", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
tauri-plugin-dialog = "2.6.0"
flate2 = "1"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.59", features = [
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }
